--- a/.env
+++ b/.env
@@ -106,3 +106,9 @@ PROMETHEUS_IMAGE_TAG=v2.41.0
 ### Grafana ####
 GRAFANA_IMAGE_NAME=ghcr.io/mhga24/grafana/grafana
 GRAFANA_IMAGE_TAG=8.5.16
+
+### Block Node ####
+BLOCK_NODE_IMAGE_PREFIX=ghcr.io/hashgraph/
+BLOCK_NODE_IMAGE_TAG=0.3.0-SNAPSHOT
+BLOCK_NODE_STORAGE_ROOT_PATH=/app/storage
+BLOCK_NODE_JAVA_OPTS='-Xms16G -Xmx16G'
