ci: Update self-hosted-runners for hiero-local-node
**Description**:

Update the self-hosted-runners from `local-node-linux-*` to
`hiero-local-node-linux-*`

**Related Issue(s)**:

Fixes #910

Signed-off-by: Roger Barker <roger.barker@swirldslabs.com>

--- a/.github/workflows/flow-pr-title-check.yaml
+++ b/.github/workflows/flow-pr-title-check.yaml
@@ -26,7 +26,7 @@ concurrency:
 jobs:
   title-check:
     name: Title Check
-    runs-on: local-node-linux-medium
+    runs-on: hiero-local-node-linux-medium
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
