--- a/.github/workflows/flow-pr-title-check.yaml
+++ b/.github/workflows/flow-pr-title-check.yaml
@@ -33,6 +33,7 @@ jobs:
         with:
           egress-policy: audit
 
+      # Note: After Step-Security is enabled return to step-security/conventional-pr-title-action
       - name: Check PR Title
         uses: azlafy-z/conventional-pr-title-action@a0b851005a0f82ac983a56ead5a8111c0d8e044a # v3.2.0
         env:
